--- a/src/pages/Music/Music.module.scss
+++ b/src/pages/Music/Music.module.scss
@@ -14,7 +14,7 @@
 .musicSectionBody {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 20px 30px 20px 20px;
 }
 
 .musicSectionText {
